// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary w/ 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        33
        €
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary w/ multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        331
        €
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
